[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/serbule.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MapOption.gd" type="Script" id=3]
[ext_resource path="res://Sprites/white_dot.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Mouse.gd" type="Script" id=5]

[node name="Surveyor" type="Node" index="0"]

[node name="Markers" type="Node" parent="." index="0"]

[node name="Map" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 427.0
margin_top = 4.0
margin_right = 1019.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="MapOption" type="OptionButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 39.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
script = ExtResource( 3 )

[node name="MouseSprite" type="Sprite" parent="." index="3"]

position = Vector2( 88.2958, 121.458 )
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset" ]

[node name="MouseColors" type="Node2D" parent="." index="4"]

[node name="ColorPickerButton" type="ColorPickerButton" parent="MouseColors" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 281.0
margin_top = 9.0
margin_right = 293.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[connection signal="mouse_entered" from="Map" to="Map" method="_on_Map_mouse_entered"]

[connection signal="mouse_exited" from="Map" to="Map" method="_on_Map_mouse_exited"]

[connection signal="item_selected" from="MapOption" to="MapOption" method="_on_MapOption_item_selected"]

[connection signal="color_changed" from="MouseColors/ColorPickerButton" to="MouseSprite" method="_on_ColorPickerButton_color_changed"]


